--- a/case2/jpf_sudoku.css
+++ b/case2/jpf_sudoku.css
@@ -16,7 +16,10 @@
 /* Table Styles */
 table.spuzzle {
    border-collapse: collapse;
-   margin: 0px auto;
+   margin-bottom: 0px;
+   margin-top: 0px;
+   margin-left: auto;
+   margin-right: auto;
    width: 90%;
 }
 td {
@@ -30,6 +33,10 @@ th {
 }
 
 /* Inner Table Styles */
+table.subTable {
+   border-collapse: collapse;
+   width: 100%;
+}
 table.subTable td {
    box-shadow: inset 0px 0px 15px;
    border: 1px solid black;
@@ -38,10 +45,10 @@ table.subTable td {
    vertical-align: center;
    text-align: center;
 }
-.goldBox td td {
+ td.goldBox td {
    background-color: rgb(228,199,42);
 }
-.greenBox td td {
+ td.greenBox td {
    background-color: rgb(203,229,130);
 }
 
