Started in Case 3

--- a/case3/lht_columns.css
+++ b/case3/lht_columns.css
@@ -6,8 +6,8 @@
    Case Problem 3
 
    Columns Style Sheet
-   Author: 
-   Date:   
+   Author: Jazzmyne Nixon
+   Date: 11/22/2019  
 
    Filename:   lht_columns.css
 
